@@ -39,6 +39,8 @@ select display digits
 read measurements
 local
 .fi
+.PP
+If an action is not selected on the command line, it is not performed.
 .SH OPTIONS
 \fBhp3457\fR accepts the following command line options:
 .TP
