@@ -33,6 +33,8 @@ clear
 configure
 local
 .fi
+.PP
+If an action is not selected on the command line, it is not peformed.
 .SH OPTIONS
 \fBhp8656\fR accepts the following command line options:
 .TP
